# dualpivot-quicksortmp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  challenge.csv  dual_pivot_sequential.h  dual_pivot_sequential_adaptive.h  dual_pivot_tasks.h  dualpivot_sections.h  dualpivot_sequential.h  dualpivot_tasks.h  dualpivot_tasks_adaptive.h  insertion_sort.h  main.c  order.h  partition.h  results.csv  shuffle.h  stats.h  swap.h
